@@ -22,7 +22,7 @@ rem Have a .schemaWorkbench directory for local
 for /F "delims=/" %%i in ('echo %USERPROFILE%') do set ROOT=%%~si
 
 if not exist %ROOT%\.schemaWorkbench mkdir %ROOT%\.schemaWorkbench
-if not exist %ROOT%\.schemaWorkbench\log4j.xml copy log4j.xml %ROOT%\.schemaWorkbench
+if not exist %ROOT%\.schemaWorkbench\log4j2.xml copy log4j2.xml %ROOT%\.schemaWorkbench
 if not exist %ROOT%\.schemaWorkbench\mondrian.properties copy mondrian.properties %ROOT%\.schemaWorkbench
 
 rem put mondrian.properties on the classpath for it to be picked up
@@ -37,6 +37,30 @@ rem in the java command below to adjust workbench logging
 set PENTAHO_JAVA=java
 call "%~dp0set-pentaho-env.bat"
 
-"%_PENTAHO_JAVA%" -Xms1024m -Xmx2048m -cp "%CP%" -Dlog4j.configuration=file:///%ROOT%\.schemaWorkbench\log4j.xml mondrian.gui.Workbench
+set ISJAVA11=0
+pushd "%_PENTAHO_JAVA_HOME%"
+if exist java.exe goto USEJAVAFROMPENTAHOJAVAHOME
+cd bin
+if exist java.exe goto USEJAVAFROMPENTAHOJAVAHOME
+popd
+pushd "%_PENTAHO_JAVA_HOME%\jre\bin"
+if exist java.exe goto USEJAVAFROMPATH
+goto USEJAVAFROMPATH
+:USEJAVAFROMPENTAHOJAVAHOME
+FOR /F %%a IN ('.\java.exe -version 2^>^&1^|%windir%\system32\find /C "version ""11."') DO (SET /a ISJAVA11=%%a)
+popd
+GOTO VERSIONCHECKDONE
+:USEJAVAFROMPATH
+FOR /F %%a IN ('java -version 2^>^&1^|%windir%\system32\find /C "version ""11."') DO (SET /a ISJAVA11=%%a)
+popd
+:VERSIONCHECKDONE
+
+SET JAVA_LOCALE_COMPAT=
+IF NOT %ISJAVA11% == 1 GOTO :SKIPLOCALE
+set JAVA_LOCALE_COMPAT=-Djava.locale.providers=COMPAT,SPI
+:SKIPLOCALE
+
+echo %JAVA_LOCALE_COMPAT%
+"%_PENTAHO_JAVA%" -Xms1024m -Xmx2048m %JAVA_LOCALE_COMPAT% -cp "%CP%" -Dlog4j.configurationFile=file:///%ROOT%\.schemaWorkbench\log4j2.xml mondrian.gui.Workbench
 
 rem End workbench.bat
